syntax = "proto3";

package deltadiff;

option go_package = "./api";

service DeltaDiffService {
    rpc CalculateDeltaDiffs(CalcImageDiffsRequest) returns (stream CalculateDeltaDiffsResponse);
    rpc GetManifest(ManifestRequest) returns (ManifestResponse);
}

message CalcImageDiffsRequest {
    Image image1 = 1;
    Image image2 = 2;
}

message CalculateDeltaDiffsResponse {
    bytes delta_diff = 1;
}

message ManifestRequest {
    Image image = 1;
    string os = 2;
    string arch = 3;
}

message ManifestResponse {
    bytes manifest = 1;
    bytes imageConfig = 2;
}

message Image {
    string reference = 1;
}